--- a/themes/default-theme/views/layouts/default-layout.html
+++ b/themes/default-theme/views/layouts/default-layout.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div id="wrapper">
+    <div id="wrapper" class=cols>
 
         <header id="top">
 			<?php echo $template['partials']['header']; ?>
@@ -19,16 +19,20 @@
         <nav id=tabs>
 			<?php echo $template['partials']['tabs']; ?>	
 		</nav>
-		<aside id=aside>
+		<section id="content-wrapper" class='cols cols4'>
+		<aside id='aside' class='first col col1'>
 			<?php echo $template['partials']['aside']; ?>
 		</aside>
-		<section id="content-wrapper">
-			<header id="content-header">
-				<?php echo $template['partials']['content-header'];?>
-				<?php echo $template['partials']['content-notices']; ?>
-			</header>
-
-			<?php echo $template['body']; ?>
+			<section  class='col col3'>
+				<header id="content-header">
+					<?php echo $template['partials']['content-header'];?>
+					<?php echo $template['partials']['content-notices']; ?>
+				</header>
+			
+			<div id='body'>
+				<?php echo $template['body']; ?>
+			</div>
+			</section>
 		</section>
 
 		<footer id=footer>
