--- a/themes/admin-theme/views/partials/content-header.html
+++ b/themes/admin-theme/views/partials/content-header.html
@@ -1,3 +1,12 @@
 <hgroup>
-<h1>content header</h1>
+	<?php echo heading($content_header, 4);?>
 </hgroup>
+<?php if(isset($shortcuts)) 
+{
+	echo "<nav id=shortcuts>";
+	echo $shortcuts;
+	echo "</nav>";
+	
+	}
+?>
+
