--- a/themes/admin-theme/views/layouts/default-layout.html
+++ b/themes/admin-theme/views/layouts/default-layout.html
@@ -17,7 +17,7 @@
 			<?php echo $template['partials']['header']; ?>
         </header><!--end #top-->
         <nav id=tabs>
-			<?php echo $template['partials']['tabs']; ?>	
+			<?php echo $template['partials']['menu']; ?>	
 		</nav>
 		<section id="content-wrapper" class='cols cols6'>
 		<aside id='aside' class='first col col1'>
